to make sure all previous changes are commited so I can use this for other project (Now I am starting black box project)

--- a/adversarial_sample_generator.ipynb
+++ b/adversarial_sample_generator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,11 +12,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ag = AdversarialGenerator()"
+    "ag = AdversarialGenerator()\n",
+    "count = 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aggressiveParam = 0"
    ]
   },
   {
@@ -30,11 +40,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 93%|███████████████████████████████████████████████████████████████████████████▎     | 93/100 [17:44<01:20, 11.45s/it]"
+     ]
+    }
+   ],
    "source": [
     "modelType = \"pca\"\n",
-    "count = 500\n",
-    "attackSamples = ag.generateAttackSamples(modelType, count)\n",
+    "attackSamples = ag.generateAttackSamples(modelType, count, aggressive = aggressiveParam)\n",
     "saveData(attackSamples, \"adversarial_data_set_\" + modelType)"
    ]
   },
@@ -52,7 +69,6 @@
    "outputs": [],
    "source": [
     "modelType = \"fullyConnected\"\n",
-    "count = 500\n",
     "attackSamples = ag.generateAttackSamples(modelType, count)\n",
     "saveData(attackSamples, \"adversarial_data_set_\" + modelType)"
    ]
@@ -71,7 +87,6 @@
    "outputs": [],
    "source": [
     "modelType = \"conv\"\n",
-    "count = 500\n",
     "attackSamples = ag.generateAttackSamplesLstm(modelType, count)\n",
     "saveData(attackSamples, \"adversarial_data_set_\" + modelType)"
    ]
@@ -91,7 +106,6 @@
    "source": [
     "## NOT WORKING FOR LSTM : USE THE CELL BELOW\n",
     "modelType = \"lstm\"\n",
-    "count = 500\n",
     "attackSamples = ag.generateAttackSamples(modelType, count)\n",
     "saveData(attackSamples, \"adversarial_data_set_\" + modelType)"
    ]
