--- a/model_tester_on_adversarial_not_secure.ipynb
+++ b/model_tester_on_adversarial_not_secure.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -46,20 +46,29 @@
      "text": [
       "Precision without threshold is:  1.0\n",
       "Recall without threshold is:  1.0\n",
-      "Min reconstruction error for anomalies:  0.0012496358692751217\n",
+      "Min reconstruction error for anomalies:  0.0035779232778897167\n",
       "max reconstruction error for benign:  nan\n",
-      "Selected threshold:  0.0012496358692751217\n",
-      "Precision by threshold is:  1.0\n",
-      "Recall by threshold is:  1.0\n"
+      "Selected threshold:  0.0036222598678164472\n",
+      "Precision by threshold is:  nan\n",
+      "Recall by threshold is:  0.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "D:\\archive\\uni\\PhD\\Trustworthy Machine Learning\\project\\Angle_Difference\\MZPackage\\Utilities.py:102: RuntimeWarning: invalid value encountered in long_scalars\n",
+      "  precision = TP/(TP+FP)\n"
      ]
     }
    ],
    "source": [
+    "#aggressive\n",
     "modelType = \"pca\"\n",
     "testSet = loadData(\"adversarial_data_set_\" + modelType)\n",
     "testSetLabels = np.ones(len(testSet)) \n",
     "precision, recall, precisionThre, recallThre, thre, minPositiveMSE, maxNegativeMSE = mb.testModel(testSet, testSetLabels, modelType)\n",
-    "thresholds[modelType] = thre    "
+    "thresholds[modelType] = thre  "
    ]
   },
   {
@@ -71,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -82,9 +91,9 @@
       "Recall without threshold is:  1.0\n",
       "Min reconstruction error for anomalies:  0.001349663181208897\n",
       "max reconstruction error for benign:  nan\n",
-      "Selected threshold:  0.001349663181208897\n",
-      "Precision by threshold is:  1.0\n",
-      "Recall by threshold is:  1.0\n"
+      "Selected threshold:  0.007424768818683248\n",
+      "Precision by threshold is:  nan\n",
+      "Recall by threshold is:  0.0\n"
      ]
     }
    ],
@@ -105,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -116,9 +125,17 @@
       "Recall without threshold is:  1.0\n",
       "Min reconstruction error for anomalies:  3.60813332074621e-05\n",
       "max reconstruction error for benign:  nan\n",
-      "Selected threshold:  3.60813332074621e-05\n",
-      "Precision by threshold is:  1.0\n",
-      "Recall by threshold is:  1.0\n"
+      "Selected threshold:  0.0014309018214142405\n",
+      "Precision by threshold is:  nan\n",
+      "Recall by threshold is:  0.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "D:\\archive\\uni\\PhD\\Trustworthy Machine Learning\\project\\Angle_Difference\\MZPackage\\Utilities.py:102: RuntimeWarning: invalid value encountered in long_scalars\n",
+      "  precision = TP/(TP+FP)\n"
      ]
     }
    ],
@@ -139,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -150,9 +167,17 @@
       "Recall without threshold is:  1.0\n",
       "Min reconstruction error for anomalies:  1.0538012298846228e-05\n",
       "max reconstruction error for benign:  nan\n",
-      "Selected threshold:  1.0538012298846228e-05\n",
-      "Precision by threshold is:  1.0\n",
-      "Recall by threshold is:  1.0\n"
+      "Selected threshold:  4.223148101830592e-05\n",
+      "Precision by threshold is:  nan\n",
+      "Recall by threshold is:  0.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "D:\\archive\\uni\\PhD\\Trustworthy Machine Learning\\project\\Angle_Difference\\MZPackage\\Utilities.py:102: RuntimeWarning: invalid value encountered in long_scalars\n",
+      "  precision = TP/(TP+FP)\n"
      ]
     }
    ],
@@ -177,6 +202,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
