--- a/model_tester_on_adversarial_secure.ipynb
+++ b/model_tester_on_adversarial_secure.ipynb
@@ -44,20 +44,109 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Precision without threshold is:  0.0\n",
+      "Recall without threshold is:  0.0\n",
+      "Min reconstruction error for anomalies:  0.003925587422935986\n",
+      "max reconstruction error for benign:  0.026961132998691684\n",
+      "Selected threshold:  0.0036222598678164472\n",
+      "Precision by threshold is:  0.0014619883040935672\n",
+      "Recall by threshold is:  1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#1/32\n",
+    "modelType = \"pca\"\n",
+    "testSet, testSetLabels = buildAdversarialDataSet(modelType)\n",
+    "precision, recall, precisionThre, recallThre, thre, minPositiveMSE, maxNegativeMSE = mb.testModel(testSet, testSetLabels, modelType, adv = 1)\n",
+    "thresholds[modelType + \"_adv\"] = thre"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Precision without threshold is:  1.0\n",
       "Recall without threshold is:  1.0\n",
-      "Min reconstruction error for anomalies:  0.0012496358692751217\n",
-      "max reconstruction error for benign:  0.0011677688693006027\n",
-      "Selected threshold:  0.0011759555692980547\n",
+      "Min reconstruction error for anomalies:  0.0015693430214065753\n",
+      "max reconstruction error for benign:  0.0013558982450146894\n",
+      "Selected threshold:  0.0036222598678164472\n",
+      "Precision by threshold is:  nan\n",
+      "Recall by threshold is:  0.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "D:\\archive\\uni\\PhD\\Trustworthy Machine Learning\\project\\Angle_Difference\\MZPackage\\Utilities.py:102: RuntimeWarning: invalid value encountered in long_scalars\n",
+      "  precision = TP/(TP+FP)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#1/16\n",
+    "modelType = \"pca\"\n",
+    "testSet, testSetLabels = buildAdversarialDataSet(modelType)\n",
+    "precision, recall, precisionThre, recallThre, thre, minPositiveMSE, maxNegativeMSE = mb.testModel(testSet, testSetLabels, modelType, adv = 1)\n",
+    "thresholds[modelType + \"_adv\"] = thre"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precision without threshold is:  1.0\n",
+      "Recall without threshold is:  1.0\n",
+      "Min reconstruction error for anomalies:  0.002837272826267405\n",
+      "max reconstruction error for benign:  0.0014518743984885353\n",
+      "Selected threshold:  0.0036222598678164472\n",
       "Precision by threshold is:  1.0\n",
-      "Recall by threshold is:  1.0\n"
+      "Recall by threshold is:  0.94\n"
+     ]
+    }
+   ],
+   "source": [
+    "#1/4\n",
+    "modelType = \"pca\"\n",
+    "testSet, testSetLabels = buildAdversarialDataSet(modelType)\n",
+    "precision, recall, precisionThre, recallThre, thre, minPositiveMSE, maxNegativeMSE = mb.testModel(testSet, testSetLabels, modelType, adv = 1)\n",
+    "thresholds[modelType + \"_adv\"] = thre"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precision without threshold is:  1.0\n",
+      "Recall without threshold is:  1.0\n",
+      "Min reconstruction error for anomalies:  0.003157802383870855\n",
+      "max reconstruction error for benign:  0.0010371453858523526\n",
+      "Selected threshold:  0.0036222598678164472\n",
+      "Precision by threshold is:  1.0\n",
+      "Recall by threshold is:  0.5\n"
      ]
     }
    ],
    "source": [
     "modelType = \"pca\"\n",
     "testSet, testSetLabels = buildAdversarialDataSet(modelType)\n",
-    "precision, recall, precisionThre, recallThre, thre, minPositiveMSE, maxNegativeMSE = mb.testModel(testSet, testSetLabels, modelType)\n",
+    "precision, recall, precisionThre, recallThre, thre, minPositiveMSE, maxNegativeMSE = mb.testModel(testSet, testSetLabels, modelType, adv = 1)\n",
     "thresholds[modelType + \"_adv\"] = thre"
    ]
   },
@@ -70,8 +159,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -79,18 +170,26 @@
      "text": [
       "Precision without threshold is:  1.0\n",
       "Recall without threshold is:  1.0\n",
-      "Min reconstruction error for anomalies:  0.001349663181208897\n",
-      "max reconstruction error for benign:  0.0012662559851134608\n",
-      "Selected threshold:  0.0012745967047230044\n",
-      "Precision by threshold is:  1.0\n",
-      "Recall by threshold is:  1.0\n"
+      "Min reconstruction error for anomalies:  0.003073575349258088\n",
+      "max reconstruction error for benign:  0.0010811324296685183\n",
+      "Selected threshold:  0.007424768818683248\n",
+      "Precision by threshold is:  nan\n",
+      "Recall by threshold is:  0.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "D:\\archive\\uni\\PhD\\Trustworthy Machine Learning\\project\\Angle_Difference\\MZPackage\\Utilities.py:102: RuntimeWarning: invalid value encountered in long_scalars\n",
+      "  precision = TP/(TP+FP)\n"
      ]
     }
    ],
    "source": [
     "modelType = \"fullyConnected\"\n",
     "testSet, testSetLabels = buildAdversarialDataSet(modelType)\n",
-    "precision, recall, precisionThre, recallThre, thre, minPositiveMSE, maxNegativeMSE = mb.testModel(testSet, testSetLabels, modelType)\n",
+    "precision, recall, precisionThre, recallThre, thre, minPositiveMSE, maxNegativeMSE = mb.testModel(testSet, testSetLabels, modelType, adv = 1)\n",
     "thresholds[modelType + \"_adv\"] = thre"
    ]
   },
@@ -99,39 +198,6 @@
    "metadata": {},
    "source": [
     "### 1D Conv"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Precision without threshold is:  1.0\n",
-      "Recall without threshold is:  1.0\n",
-      "Min reconstruction error for anomalies:  3.616080544701276e-05\n",
-      "max reconstruction error for benign:  3.451640304838982e-05\n",
-      "Selected threshold:  3.4680843288252115e-05\n",
-      "Precision by threshold is:  1.0\n",
-      "Recall by threshold is:  1.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "modelType = \"conv\"\n",
-    "testSet, testSetLabels = buildAdversarialDataSet(modelType)\n",
-    "precision, recall, precisionThre, recallThre, thre, minPositiveMSE, maxNegativeMSE = mb.testModel(testSet, testSetLabels, modelType)\n",
-    "thresholds[modelType + \"_adv\"] = thre"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### LSTM"
    ]
   },
   {
@@ -145,10 +211,43 @@
      "text": [
       "Precision without threshold is:  1.0\n",
       "Recall without threshold is:  1.0\n",
-      "Min reconstruction error for anomalies:  1.0538012298846228e-05\n",
-      "max reconstruction error for benign:  1.0025960172065749e-05\n",
-      "Selected threshold:  1.0077165384743796e-05\n",
+      "Min reconstruction error for anomalies:  0.0022853074886004694\n",
+      "max reconstruction error for benign:  8.91216968976937e-05\n",
+      "Selected threshold:  0.0014309018214142405\n",
       "Precision by threshold is:  1.0\n",
+      "Recall by threshold is:  1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "modelType = \"conv\"\n",
+    "testSet, testSetLabels = buildAdversarialDataSet(modelType)\n",
+    "precision, recall, precisionThre, recallThre, thre, minPositiveMSE, maxNegativeMSE = mb.testModel(testSet, testSetLabels, modelType, adv = 1)\n",
+    "thresholds[modelType + \"_adv\"] = thre"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### LSTM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precision without threshold is:  1.0\n",
+      "Recall without threshold is:  1.0\n",
+      "Min reconstruction error for anomalies:  0.014541888110610808\n",
+      "max reconstruction error for benign:  0.003002605852733423\n",
+      "Selected threshold:  4.223148101830592e-05\n",
+      "Precision by threshold is:  0.15318627450980393\n",
       "Recall by threshold is:  1.0\n"
      ]
     }
@@ -156,49 +255,16 @@
    "source": [
     "modelType = \"lstm\"\n",
     "testSet, testSetLabels = buildAdversarialDataSet(modelType)\n",
-    "precision, recall, precisionThre, recallThre, thre, minPositiveMSE, maxNegativeMSE = mb.testModel(testSet, testSetLabels, modelType)\n",
+    "precision, recall, precisionThre, recallThre, thre, minPositiveMSE, maxNegativeMSE = mb.testModel(testSet, testSetLabels, modelType, adv = 1)\n",
     "thresholds[modelType + \"_adv\"] = thre"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(250, 1, 200, 9)"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "advTestSet.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1382, 200, 9)"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "benignTestSet.shape"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
