update all tracked files to latest version

--- a/attack_data_set_builder.ipynb
+++ b/attack_data_set_builder.ipynb
@@ -2,45 +2,37 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
     "from MZPackage.DataPreprocessor import DataPreprocessor\n",
     "from MZPackage.Utilities import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dp = DataPreprocessor()"
+    "dp = DataPreprocessor()\n",
+    "featuresList = [\"Iprobe1_a\",\"Iprobe1_b\",\"Iprobe1_c\",\"Iprobe2_a\",\"Iprobe2_b\",\"Iprobe2_c\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 3,
    "outputs": [],
-   "source": [
-    "# get benign data and save \n",
-    "benignData = dp.getBenignData([\"Iprobe1_a\",\"Iprobe1_b\",\"Iprobe1_c\",\"Iprobe2_a\",\"Iprobe2_b\",\"Iprobe2_c\",\"PhaseAngle_a\",\"PhaseAngle_b\",\"PhaseAngle_c\"])\n",
-    "normalizedBenignData = dp.normalizeDataSetUsingSavedParams(benignData.copy())\n",
-    "saveData(normalizedBenignData, \"normalized_benign_data_set\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# generate FDI attack data and save\n",
-    "FDIAttackData = dp.getRandomFDIAttackData([0,1,2],1000)\n",
-    "saveData(FDIAttackData, \"normalized_fdi_attack_data_set\")"
-   ]
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
@@ -51,69 +43,91 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████████| 216/216 [01:48<00:00,  1.99it/s]\n",
-      "100%|████████████████████████████████████████████████████████████████████████████████| 216/216 [01:53<00:00,  1.90it/s]\n",
-      "100%|████████████████████████████████████████████████████████████████████████████████| 216/216 [01:55<00:00,  1.86it/s]\n",
-      "100%|████████████████████████████████████████████████████████████████████████████████| 216/216 [02:17<00:00,  1.57it/s]\n"
+      "100%|██████████| 216/216 [00:02<00:00, 91.14it/s]\n",
+      "100%|██████████| 216/216 [00:02<00:00, 87.61it/s]\n",
+      "100%|██████████| 216/216 [00:02<00:00, 77.63it/s]\n",
+      "100%|██████████| 216/216 [00:02<00:00, 77.34it/s]\n",
+      "100%|██████████| 216/216 [00:06<00:00, 33.48it/s]\n",
+      "100%|██████████| 216/216 [00:23<00:00,  9.09it/s]\n"
      ]
     }
    ],
    "source": [
-    "# generate angle shift attack data and save\n",
-    "angleShiftAttackData = dp.getShiftedAngleData([\"Iprobe1_a\",\"Iprobe1_b\",\"Iprobe1_c\",\"Iprobe2_a\",\"Iprobe2_b\",\"Iprobe2_c\",\"PhaseAngle_a\",\"PhaseAngle_b\",\"PhaseAngle_c\"]\n",
-    "                                  ,[\"PhaseAngle_a\",\"PhaseAngle_b\",\"PhaseAngle_c\"]\n",
-    "                                  ,1000, shiftRange = [1,5])\n",
-    "normalizedAngleShiftAttackData = dp.normalizeDataSetUsingSavedParams(angleShiftAttackData.copy())\n",
-    "saveData(normalizedAngleShiftAttackData, \"normalized_angle_shift_attack_data_set\")"
+    "# get benign data and save \n",
+    "benignData = dp.getNoFaultData(featuresList, datasetFolderName=\"original_mat\")\n",
+    "normalizedBenignData = dp.normalizeDataSetUsingSavedParams(benignData.copy())\n",
+    "saveData(normalizedBenignData, \"Anomaly_Detection_Model_Data/normalized_no_fault_data_set\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████████| 216/216 [01:49<00:00,  1.98it/s]\n",
-      "100%|████████████████████████████████████████████████████████████████████████████████| 216/216 [01:54<00:00,  1.89it/s]\n",
-      "100%|████████████████████████████████████████████████████████████████████████████████| 216/216 [01:55<00:00,  1.87it/s]\n",
-      "100%|████████████████████████████████████████████████████████████████████████████████| 216/216 [02:12<00:00,  1.63it/s]\n"
+      "100%|██████████| 1000/1000 [00:00<00:00, 1495.89it/s]\n"
      ]
     }
    ],
    "source": [
-    "# Time sync attack\n",
-    "timeSyncAttackData = dp.getShiftedAngleData([\"Iprobe1_a\",\"Iprobe1_b\",\"Iprobe1_c\",\"Iprobe2_a\",\"Iprobe2_b\",\"Iprobe2_c\",\"PhaseAngle_a\",\"PhaseAngle_b\",\"PhaseAngle_c\"]\n",
-    "                                  ,[\"Iprobe1_a\",\"Iprobe1_b\",\"Iprobe1_c\",\"PhaseAngle_a\",\"PhaseAngle_b\",\"PhaseAngle_c\"]\n",
-    "                                  ,1000, shiftRange = [5,15])\n",
-    "normalizedTimeSyncAttackData = dp.normalizeDataSetUsingSavedParams(timeSyncAttackData.copy())\n",
-    "saveData(normalizedTimeSyncAttackData, \"normalized_time_sync_attack_data_set\")"
+    "# generate FDI attack data and save\n",
+    "FDIAttackData = dp.getRandomFDIAttackData([0,1,2],1000, \"Anomaly_Detection_Model_Data/normalized_no_fault_data_set\")\n",
+    "saveData(FDIAttackData, \"Anomaly_Detection_Model_Data/normalized_fdi_attack_data_set\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#tmp\n",
-    "from MZPackage.DataPreprocessor import DataPreprocessor\n",
-    "from MZPackage.Utilities import *\n",
-    "dp = DataPreprocessor()\n",
-    "\n",
-    "# Replay attack\n",
-    "replayAttackData = dp.getReplayAttackData(1000)\n",
-    "saveData(replayAttackData, \"normalized_replay_attack_data_set\")"
+    "replayAttackData = dp.getReplayAttackData(1000, \"Anomaly_Detection_Model_Data/normalized_no_fault_data_set\", \"Anomaly_Detection_Model_Data/normalized_data_set\")\n",
+    "saveData(replayAttackData, \"Anomaly_Detection_Model_Data/normalized_replay_attack_data_set\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 216/216 [00:17<00:00, 12.57it/s]\n",
+      "100%|██████████| 216/216 [00:02<00:00, 82.52it/s]\n",
+      "100%|██████████| 216/216 [00:02<00:00, 79.99it/s]\n",
+      "100%|██████████| 216/216 [00:02<00:00, 77.28it/s]\n",
+      "100%|██████████| 216/216 [00:07<00:00, 28.33it/s]\n",
+      "100%|██████████| 216/216 [00:23<00:00,  9.16it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "featuresToShift = featuresList[0:3]\n",
+    "shiftAttackData = dp.getShiftAttackData(featuresList, featuresToShift, 1000, datasetFolderName = \"original_mat\")\n",
+    "saveData(shiftAttackData, \"Anomaly_Detection_Model_Data/normalized_time_sync_attack_data_set\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
