--- a/save_config.ipynb
+++ b/save_config.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,16 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataSet = loadData(\"normalized_data_set\")\n",
+    "dataSet = loadData(\"Anomaly_Detection_Model_Data/normalized_data_set\")\n",
     "dataSetSize = dataSet.shape[0]\n",
     "testSetBenignSize = int(dataSetSize/10)\n",
     "validationSetSize = int(dataSetSize/10)\n",
     "trainingSetSize = dataSetSize - testSetBenignSize - validationSetSize\n",
-    "sequenceLen = dataSet.shape[1]\n",
+    "#sequenceLen = dataSet.shape[1]\n",
+    "sequenceLen = 200\n",
     "dimensionsCount = dataSet.shape[2]\n",
     "config = {\"dataSetSize\":dataSetSize,\n",
     "          \"testSetBenignSize\":testSetBenignSize,\n",
